2006-03-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.h: fix compilation for systems that do not have stdint.h.
	Patch by "CK Ng".

2006-03-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: add apxs -q CFLAGS. Fixes bug #77764.

2006-02-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: append --includes from apr-config to CFLAGS.

2006-01-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mod_mono.conf.in: add .Config to the list of extensions handled by
	mod_mono.

2006-01-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: actually write the result of IS_CONNECTED. Patch by
	Cyrille Colin.

2006-01-06 Wade Berrier <wberrier@novell.com>

	* Remove apache 2.2 support on branch for now

2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: patch by Dean Brettle that fixes chunked encoding
	support.

2005-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* man/mod_mono.8.in:
	* INSTALL: add documentation about the control panel. Patch by Matthew
	Law.

2005-11-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: make auto-hosting work in apache 1.3.

2005-11-11 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: fix problems in 1.1.10 regarding user-configured applications.
	We were finding the global server instead of the default one.

2005-11-09  Robert Jordan  <robertj@gmx.net>

	* src/mod_mono.*: fixed compatibility issue with Apache 1.3.

2005-11-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* mod_mono.conf.in: added ASP.NET extensions to the configuration file.
	* src/mod_mono.c: added MonoAutoApplication directive and support for
	automatically registering new ASP.NET applications as they are
	discovered.

2005-10-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: 1.1.9.99.
	* src/mod_mono.[ch]: server variables are now written with the rest of
	the initial data sent to mod-mono-server. Variables starting with HTTP_